--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,4 +1,4 @@
-last 2 Chrome versions
-last 2 Firefox versions
-last 2 Safari versions
+last 1 Chrome version
+last 1 Firefox version
 last 2 Edge versions
+last 2 Safari versions
