--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "express": "^4.18.2",
     "fs-extra": "^11.3.0",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.1.91",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
